# ffitrain

./: Cargo.toml  README.md
dynamiclink/: .gitignore  CMakeLists.txt  Cargo.toml
dynamiclink/cpp/: main.cpp
dynamiclink/include/: fromrust.h
dynamiclink/src/: lib.rs
ffitrain/: Cargo.toml  build.rs  rust-toolchain.toml
ffitrain/bindings/: mime.c
ffitrain/src/: lib.rs  main.rs
linkrust/: Cargo.toml
linkrust/src/: main.rs
